[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/enemies/strafer/StraferEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/strafer/Strafer.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/sounds/EnemyExplode.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/enemies/sounds/EnemyShoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/materials/ExplosionParticles.tres" type="Material" id=5]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.938865 )
colors = PoolColorArray( 0.847656, 0.449438, 0.254959, 1, 0.152344, 0.152344, 0.152344, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.9136 ), 0.0, 0.914, 0, 0, Vector2( 1, 0 ), -0.497836, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 5.3
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="StraferEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 37
script = ExtResource( 1 )

[node name="StraferSprite" type="Sprite" parent="."]
position = Vector2( 0, -3.95 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="StraferCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.38 )
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 7 )

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 1.31951

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="PropulsionParticles" type="Particles2D" parent="."]
show_behind_parent = true
amount = 256
local_coords = false
process_material = SubResource( 6 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 512
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = ExtResource( 5 )

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 1.25

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="ShotCooldown" to="." method="_on_ShotCooldown_timeout"]
[connection signal="timeout" from="DeletionTimer" to="." method="_on_DeletionTimer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
